square root added

--- a/cal2.html
+++ b/cal2.html
@@ -22,6 +22,7 @@ $(document).ready(function(){
 	<button>SUB</button>
 	<button>MUL</button>
 	<button>DIV</button>
+	<button>Square root</button>
 </p>
 
 </body>
