added abc feature by other developer

--- a/cal2.html
+++ b/cal2.html
@@ -23,6 +23,7 @@ $(document).ready(function(){
 	<button>MUL</button>
 	<button>DIV</button>
 	<button>Square root</button>
+	<button>Abc</button>
 </p>
 
 </body>
