testing branch changes

--- a/cal2.html
+++ b/cal2.html
@@ -18,11 +18,13 @@ $(document).ready(function(){
 
 
 <p id="button">
-    <button>ADD</button>
+    
 	<button>SUB</button>
 	<button>MUL</button>
 	<button>DIV</button>
 	<button>Square root</button>
+
+	test branch changes
 </p>
 
 </body>
